...
            <point key="canvasLocation" x="2868" y="1582"/>
        </scene>
        <!--Settings-->
        <scene sceneID="c8M-fY-GIe">
            <objects>
                <navigationController id="hyM-uz-rh5" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="5" title="Settings" image="gear" id="ENo-Zd-Cyo"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="XNP-E9-zyO">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="jqk-Ld-bTH" kind="relationship" relationship="rootViewController" id="QVy-G7-its"/>
...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VgM-Wp-uyk">
                                                    <rect key="frame" x="242" y="6" width="152" height="33"/>
                                                    <segments>
                                                        <segment title="Auto"/>
                                                        <segment title="Light"/>
                                                        <segment title="Dark"/>
                                                    </segments>
                                                    <connections>
                                                        <action selector="changeThemeMode:" destination="jqk-Ld-bTH" eventType="valueChanged" id="z5o-Hd-AZf"/>
                                                    </connections>
                                                </segmentedControl>
                                            </subviews>
...
            <point key="canvasLocation" x="2867" y="4409"/>
        </scene>
        <!--Genres-->
        <scene sceneID="lt2-ij-wcj">
            <objects>
                <navigationController id="aAZ-7z-KvJ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="4" title="Genres" image="genres" id="HkY-RJ-hxk"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xST-7a-ybj">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="SHP-Lf-nTL" kind="relationship" relationship="rootViewController" id="rYp-iu-v8Y"/>
...
            <point key="canvasLocation" x="2000" y="3005"/>
        </scene>
        <!--Songs-->
        <scene sceneID="8b0-hz-zsq">
            <objects>
                <navigationController id="eR9-d5-eW1" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="3" title="Songs" image="songs" id="dek-Mg-FkC">
                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="KhR-CN-jEn">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
                                                        <connections>
                                                            <action selector="previousTrack:" destination="CfZ-TZ-jB1" eventType="touchUpInside" id="Ijd-Ib-Nzf"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EFP-73-QrW">
                                                        <rect key="frame" x="155.5" y="8.5" width="33.5" height="33.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="playButton"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="EFP-73-QrW" secondAttribute="height" multiplier="1:1" id="hDA-cf-q0n"/>
                                                        </constraints>
                                                        <color key="tintColor" systemColor="labelColor"/>
                                                        <state key="normal" image="play_fill">
                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30" scale="default" weight="ultraLight"/>
...
                            <constraint firstItem="VMj-ag-UMl" firstAttribute="bottom" secondItem="Tlu-bR-tgd" secondAttribute="bottom" id="Tf3-Su-foh"/>
                            <constraint firstItem="W4p-qL-3yP" firstAttribute="top" secondItem="VMj-ag-UMl" secondAttribute="top" id="Vkt-cU-HwJ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Genres" id="DTq-QP-rKZ">
                        <barButtonItem key="backBarButtonItem" title=" " id="Mli-bB-flV"/>
                        <barButtonItem key="leftBarButtonItem" title="Item" image="grid" id="rEd-SW-PG4">
                            <connections>
                                <action selector="swapView:" destination="SHP-Lf-nTL" id="taK-hR-Faj"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="QJE-Rp-6Gn">
                            <connections>
...
